--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
+  background-image: url(../images/the-lightning-thief.png);
 }
 
 img {
