--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,7 +8,6 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
-  background-image: url(../images/the-lightning-thief.png);
 }
 
 img {
@@ -23,11 +22,25 @@ p {
   margin: 0;
 }
 
+.btn {
+  text-decoration: none;
+  &:hover {
+    color: black;
+  }
+}
+
 .grid {
   display: grid;
 }
 
 .book-form {
+  position: absolute;
+  // inset: 0;
+  right: 0;
+  top: 0;
   display: flex;
   flex-direction: column;
+  &--hidden {
+    display: none;
+  }
 }
