--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
+  min-height: 100vh;
 }
 
 img {
@@ -23,15 +24,27 @@ p {
 }
 
 .btn {
-  text-decoration: none;
+  padding: 0.75em 1em;
+  border: none;
+  border-radius: 0.125em;
+  transition: all 0.2s ease-out;
 }
 
 .btn:hover {
-  color: black;
+  filter: brightness(120%);
 }
 
 .grid {
   display: grid;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  background-color: #cfcfcf;
+  margin: 1rem;
+  padding: 1rem;
+  max-width: 250px;
 }
 
 .book-form {
