--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,6 +8,7 @@ body {
   margin: 0;
   display: flex;
   align-items: center;
+  min-height: 100vh;
 }
 
 img {
@@ -23,9 +24,12 @@ p {
 }
 
 .btn {
-  text-decoration: none;
+  padding: 0.75em 1em;
+  border: none;
+  border-radius: 0.125em;
+  transition: all 0.2s ease-out;
   &:hover {
-    color: black;
+    filter: brightness(120%);
   }
 }
 
@@ -33,14 +37,24 @@ p {
   display: grid;
 }
 
-.book-form {
-  position: absolute;
-  // inset: 0;
-  right: 0;
-  top: 0;
+.book {
   display: flex;
   flex-direction: column;
-  &--hidden {
-    display: none;
+  background-color: rgb(207, 207, 207);
+  margin: 1rem;
+  padding: 1rem;
+  max-width: 250px;
+}
+
+.book {
+  &-form {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    &--hidden {
+      display: none;
+    }
   }
 }
