--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,28 @@ p {
   top: 0;
   display: flex;
   flex-direction: column;
+  min-width: 30rem;
 }
 
 .book-form--hidden {
   display: none;
+}
+
+.book-form__label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.book-form__label::after {
+  content: attr(data-error);
+  text-align: end;
+  color: red;
+}
+
+.book-form__input {
+  min-height: 2rem;
+  margin-bottom: 2rem;
 }
 /*# sourceMappingURL=styles.css.map */
