--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -53,8 +53,26 @@ p {
     top: 0;
     display: flex;
     flex-direction: column;
+    min-width: 30rem;
     &--hidden {
       display: none;
+    }
+
+    &__label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 1rem;
+      &::after {
+        content: attr(data-error);
+        text-align: end;
+        color: red;
+      }
+    }
+
+    &__input {
+      min-height: 2rem;
+      margin-bottom: 2rem;
     }
   }
 }
